Add new vulnerability scanning to project
Also updated artifactory setup for deploying releases
to maven central.

--- a/templates/libraries/okhttp-gson/pom.mustache
+++ b/templates/libraries/okhttp-gson/pom.mustache
@@ -187,6 +187,24 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- Example configurations for owasp dependency scanner: https://jeremylong.github.io/DependencyCheck/dependency-check-maven/
+                Includes examples of passing false positive results-->
+            <plugin>
+                <groupId>org.owasp</groupId>
+                <artifactId>dependency-check-maven</artifactId>
+                <version>6.2.2</version>
+                <configuration>
+                    <failBuildOnCVSS>7</failBuildOnCVSS>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -209,29 +227,6 @@
                     <goals>
                         <goal>report</goal>
                     </goals>
-                </execution>
-                <execution>
-                    <id>coverage-check</id>
-                    <goals>
-                        <goal>check</goal>
-                    </goals>
-                    <configuration>
-                    <rules>
-                        <rule>
-                            <element>CLASS</element>
-                            <excludes>
-                                <exclude>com.cyberark.conjur.sdk.model.*</exclude>
-                            </excludes>
-                            <limits>
-                                <limit>
-                                    <counter>LINE</counter>
-                                    <value>COVEREDRATIO</value>
-                                    <minimum>10%</minimum>
-                                </limit>
-                            </limits>
-                        </rule>
-                    </rules>
-                    </configuration>
                 </execution>
                 </executions>
             </plugin>
